# mini-project-oop

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEMO.md  FINAL_REPORT.md  README.md  coverage.xml
.github/workflows/: ci.yml
docs/: DEVELOPER_GUIDE.md  TESTING.md  USER_GUIDE.md  backlog.md  defense-checklist.md  extension-plan.md  extension-report.md  iteration-1.md  iteration-2.md  iteration-3.md  self-audit.md  syllabus-coverage.md  test-matrix.md  test-strategy.md  vision.md
src/: main.cpp
src/application/: cinema_service.cpp  cinema_service.hpp  dtos.hpp  query_service.cpp  query_service.hpp
src/domain/: contracts.hpp  errors.hpp  models.hpp  pricing.hpp  result.hpp
src/infrastructure/: file_repositories.cpp  file_repositories.hpp
src/presentation/: cli.cpp  cli.hpp
tests/: integration_tests.cpp  test_framework.hpp  unit_tests.cpp
uml/: class-diagram.mmd  class-diagram.puml  sequence-booking.mmd  sequence-booking.puml  use-case-diagram.mmd  use-case-diagram.puml
